fix(css): use % to make adjustments to vertical alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,6 +37,7 @@ h1 {
   line-height: 1;
   padding-top: 16px;
   margin-bottom: 0;
+  margin-top: -20px;
 }
 
 button {
@@ -86,6 +87,7 @@ button:focus-visible {
     padding: 0.5em;
   }
   h1 {
+    margin-top: 0;
     font-size: 2.0rem;
   }
   .description {
@@ -95,13 +97,32 @@ button:focus-visible {
     font-size: 0.8em;
     padding: 0.5em;
   }
+  section {
+    margin-top: 20%;
+    margin-bottom: 10%;
+  }
+  .section-1 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .section-2 {
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
 }
 section {
-  padding-top: 100px;
-  padding-bottom: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-self: center;
   align-items: center;
+}
+
+.section-1 {
+  padding-top: 10%;
+  padding-bottom: 5%;
+}
+
+.section-2 {
+  padding-bottom: 10%;
 }
